<resources>
    <string name="app_name">Magic Library</string>

    <!-- TabFragment -->
    <string name="search_cards">Search cards</string>
    <string name="collection_cards">My collection</string>

    <!-- Search Card Fragment -->
    <string name="search_placeholder">Search a card by name…</string>
    <string name="btn_generate_card">Generate Card</string>
    <string name="btn_add_collection">Add Collection</string>
    <string name="msg_error_add_card_to_collection">An error has occurred adding the card to collection</string>
    <string name="msg_card_added_to_colecction">Card Added to Collection</string>
    <string name="msg_error_card_random">An error has occurred generating a card. Try it again</string>

    <!-- Collection Fragment -->
    <string name="filter_placeholder">Filter cards by name…</string>
    <string name="msg_card_deleted_succesfully">Card deleted correctly from collection</string>

    <!-- Card Detail Fragment -->
    <string name="text_usd">Usd :</string>
    <string name="text_eur">Eur :</string>
    <string name="purchase_links">Purchase Links</string>
    <string name="tcgplayer_link">Tcgplayer Link</string>
    <string name="cardmarket_link">Cardmarket Link</string>
    <string name="purchase_prices">Purchase Prices</string>
    <string name="description_text">Description Text</string>
    <string name="text_comments">Write some comments…</string>
    <string name="msg_buy_link">Wait until is redirected to web</string>
    <string name="btn_text_view">View</string>

</resources>